<resources>
    <string name="app_name">Shopy</string>

    <string name="your_device_offline">You are offline.</string>
    <string name="some_error_occured">An error has occurred</string>
    <string name="session_expired">Session Expired!</string>
    <string name="ok">OK</string>\

    <string name="unexpected_error">Unexpected error</string>
    <string name="take_image">Take Image</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="gallery">Gallery</string>

    <string name="camera_permission_required">Camera and Storage permission is required to use this feature.</string>
    <string name="location_permission_required">Location permission is required to use this feature</string>
    <string name="storage_permission_required">Storage Permission is required to use this feature</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="already_have_an_account_sign_in">Already have an account?<b> Sign In</b></string>
    <string name="do_not_have_account">Don’t have an account?<b> Sign Up</b></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_">Forgot password</string>
    <string name="submit">Submit</string>
    <string name="recovery_code">Recovery code</string>
    <string name="enter_otp_sent_to_654_8545_652">Enter OTP sent to <b> john@gmail.com</b></string>
    <string name="didn_t_receive_an_otp_resend_otp">Didn’t receive an OTP?<b><font fgcolor='#1152FD'> Resend OTP</font></b></string>
    <string name="your_new_password_must_be_different_from_previously_used_passwords">Your new password must be different from previously used passwords.</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_reset_successful">Password reset \nsuccessful</string>
    <string name="wishlist">Wishlist</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="enter_code_voucher">Enter code voucher</string>
    <string name="my_account">My Account</string>

    <!--My Account Strings-->
    <string name="account_details">Account details</string>
    <string name="cards_offers">Card &amp; offers</string>
    <string name="notifications">Notifications</string>
    <string name="delivery_information">Delivery information</string>
    <string name="payment_info">Payment information</string>
    <string name="language">Language</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="logout">Logout</string>
    <string name="buy_now">Buy Now</string>
    <string name="view_all">View all</string>

</resources>