<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.bipin.shopy.views.wishlist.WishlistVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.wishlist.WishlistFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onClick}"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/wishlist"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/clToolbar" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWishlist"
            setRecyclerAdapter="@{vm.adapter}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btnAddToCart"
            app:layout_constraintTop_toBottomOf="@id/etSearch"
            tools:itemCount="5"
            tools:listitem="@layout/item_wishlist" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddToCart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/app_color"
            android:fontFamily="@font/montserrat_bold"
            android:paddingVertical="@dimen/_15sdp"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:strokeColor="@color/app_color"
            app:strokeWidth="@dimen/_1sdp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>