<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.bipin.shopy.views.login.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow"
                android:onClick="@{vm::onClick}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/sign_in"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clToolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp">


                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/e_mail"
                    android:textColor="@color/mText_color"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvEmail" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/password"
                    android:textColor="@color/mText_color"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etEmail" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvPassword" />

                <TextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:onClick="@{vm::onClick}"
                    android:text="@string/forgot_password"
                    android:textColor="@color/mText_color"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/app_color"
                    android:backgroundTintMode="add"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingVertical="@dimen/_12sdp"
                    android:onClick="@{vm::onClick}"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:cornerRadius="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvForgotPass"
                    app:strokeColor="@color/app_color"
                    app:strokeWidth="@dimen/_1sdp" />

                <LinearLayout
                    android:id="@+id/llOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/btnSignIn">

                    <View
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:alpha="0.3"
                        android:background="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/or_sign_in_with"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:alpha="0.3"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintTop_toBottomOf="@id/llOption">

                    <ImageButton
                        android:id="@+id/btnFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edit_text"
                        android:backgroundTint="@color/grey_stroke_bg"
                        android:scaleType="centerCrop"
                        android:src="@drawable/gmail"
                        app:layout_constraintTop_toBottomOf="@id/etPassword" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/btnGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edit_text"
                        android:backgroundTint="@color/grey_stroke_bg"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fb"
                        app:layout_constraintTop_toBottomOf="@id/etPassword" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvDoNotHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:onClick="@{vm::onClick}"
                    android:text="@string/do_not_have_account"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llSocial" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>